Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-10-04 (SVN):
    * sys_amiga.c: fixed Sys_GetClipboardData(), text pasting now works.
    * updated version date stamp to 2012-10-04.

2012-10-03 (SVN):
    * snd_sun.c: include ioctl.h before audioio.h. changed C++ comments
      into C-style comments.
    * snd_alsa.c: changed C++ comments into C-style comments.

2012-10-01 (SVN):
    * client.hc, invntory.hc: artifact_active/artifact_low setting and
      clearing of ART_TOMEOFPOWER, ART_INVINCIBILITY, ART_INVISIBILITY,
      and ART_HASTE are now done simply by using BITSET and BITCLR ops.

2012-10-01 (SVN):
    * h2/cube.hc (cube_find_target): fixed parens in the if construct.
      don't choose a monster whose controller is the same as the cube's
      controller, i.e. the player's summoned imp. assign self as the
      cube's controller in UseCubeOfForce(). fixes backported from the
      mission pack version of the cube hcode.
    * updated version date stamp to 2012-10-01.

2012-09-30 (SVN):
    * sys_amiga.c (Sys_GetClipboardData): types of readbytes and error
      return values must be signed not unsigned. ReadChunkBytes() must
      be called with one byte less than the read buffer array size as
      numbytes for the nul terminator. do nul terminate the read buffer
      when ReadChunkBytes() reports success. read buffer array size is
      now 256 (MAXCMDLINE), instead of 1024.

2012-09-30 (SVN):
    * keys.c (Key_Console): some tidy-up. made Ctrl-c key combination to
      abort the line (from Steven/Quakespasm rev. 99.)
    * updated version date stamp to 2012-09-30.

2012-09-29 (SVN):
    * in_sdl.c (IN_SendKeyEvents): fixed major thinko in SDLK_WORLD_xx
      change from yesterday's r4973.
    * updated version date stamp to 2012-09-29.

2012-09-28 (SVN):
    * keys.c: added K_COMMAND as a new key. added Cmd+V as a Mac special
      case for paste request.